# Raytracing

./: CMakeLists.txt  README.md
include/: Camera.h  Lights.h  Material.h  Object.h  OpenglDraw.h  Ray.h  Shapes.h  window.h
src/: Object.cpp  Shapes.cpp  main.cpp  test1.cpp  window.cpp
